# Elliotts-Sony-Automator-Controls

./: .gitignore  IMPLEMENTATION_PLAN_v1.1.0.md  README.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.6.md  RELEASE_NOTES_v1.0.8.md  RELEASE_NOTES_v1.1.1.md  SESSION_SUMMARY.md  SonyAutomatorControls.spec  TCPTestClient.spec  UPGRADE_SUMMARY.md  WIP_v1.1.0_REMAINING_WORK.md  create_icon.py  create_sac_icon.py  pyproject.toml  requirements.txt  tcp_test_client.py
.claude/: settings.local.json
.github/workflows/: build.yml
sony_automator_controls/: __init__.py  core.py  gui_launcher.py
