[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sony-automator-controls"
version = "1.0.0"
description = "Sony Automator Controls - TCP to HTTP command bridge for Sony devices"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Elliott", email = ""},
]
keywords = ["sony", "automator", "tcp", "http", "control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
sony-automator-controls = "sony_automator_controls.__main__:main"

[project.urls]
Homepage = "https://github.com/BlueElliott/Elliotts-Sony-Automator-Controls"
Repository = "https://github.com/BlueElliott/Elliotts-Sony-Automator-Controls"

[tool.setuptools]
packages = ["sony_automator_controls"]
